Fix alignment of LOC counts

--- a/index.css
+++ b/index.css
@@ -114,6 +114,13 @@ input {
 #results li:hover {
   background-color: #E6E6E6;
 }
+.loc #results li > span:first-child {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 326px;
+}
 a, a:visited {
   color: #2244CC;
 }
@@ -127,7 +134,8 @@ a, a:visited {
   font-style: normal;
 }
 .repo-stats {
-  float: right;
+  position: absolute;
+  right: 20px;
 }
 .repo-stats span {
   -moz-box-sizing: border-box;
@@ -135,7 +143,7 @@ a, a:visited {
   box-sizing: border-box;
   display: inline-block;
   padding-left: 0.5em;
-  width: 105px;
+  width: 125px;
 }
 .added {
   color: #004400;
